--- a/secret-invite.html
+++ b/secret-invite.html
@@ -20,15 +20,27 @@
   .page-wrap{min-height:100svh;padding:20px;border:2px solid var(--gold);position:relative}
 
   /* Logo */
-  .header{display:flex;align-items:center;justify-content:center;margin-bottom:24px} /* more space under logo */
+  .header{display:flex;align-items:center;justify-content:center;margin-bottom:24px}
   .logo{display:block;margin:0 auto;max-width:140px;width:140px;height:auto}
+
+  /* Area selector (compact, easy to extend later) */
+  .areas-wrap{display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap;margin:2px 0 14px}
+  .areas-wrap label{font-size:14px;opacity:.9}
+  .areas-select{
+    background:transparent;color:#ddd;border:1px solid var(--gold);
+    border-radius:10px;padding:8px 10px;min-width:230px;outline:none
+  }
+  .areas-save{
+    border:1px solid var(--gold);background:transparent;color:var(--gold);
+    padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:700
+  }
 
   /* Doors grid */
   .doors{
     display:grid;
     grid-template-columns:repeat(3,minmax(0,1fr));
     gap:18px;
-    align-items:start;              /* captions stick to images */
+    align-items:start;
     max-width:1100px;
     margin:10px auto 0;
   }
@@ -46,7 +58,7 @@
   /* Clickable door = only the image, no invisible box */
   .door-btn{
     display:block;border:none;background:transparent;padding:0;margin:0;cursor:pointer;
-    width:100%;max-width:360px;     /* bigger door */
+    width:100%;max-width:360px;
   }
   .door-btn img{
     display:block;width:100%;height:auto;object-fit:contain;background:transparent;
@@ -115,6 +127,13 @@
     <img class="logo" src="golden-le-libido-logo.png" alt="Le Libido" loading="lazy">
   </header>
 
+  <!-- Area picker -->
+  <div class="areas-wrap" id="areasWrap">
+    <label for="areaSelect">Your area(s):</label>
+    <select id="areaSelect" class="areas-select"></select>
+    <button id="saveAreasBtn" class="areas-save">Save</button>
+  </div>
+
   <!-- Doors -->
   <section class="doors">
     <!-- BLUE -->
@@ -159,7 +178,7 @@
 
 <script>
 /* ===========================
-   COLOR from localStorage
+   Archetype → color (from localStorage)
 =========================== */
 const slugToTitle = {
   'devoted_darling':'Devoted Darling','mood_multiplier':'Mood Multiplier','tender_protector':'Tender Protector','heatwave':'Heatwave',
@@ -180,25 +199,74 @@ function getArchetypeColor(){
 }
 
 /* ===========================
-   Minimal config (venues & themes)
+   Areas + venues (extend later)
 =========================== */
+const AREAS = [
+  { id:"central-nj", label:"Central New Jersey" },
+  { id:"manhattan", label:"Manhattan" },           // examples for future
+  { id:"brooklyn",  label:"Brooklyn" }
+];
+
 const VENUES_BY_AREA = {
   "central-nj":[
     { name:"Metropolitan Cafe", address:"8 E Main St, Freehold, NJ 07728", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Metropolitan+Cafe+8+E+Main+St,+Freehold,+NJ+07728" },
     { name:"Nonna’s Cucina", address:"448 US-9, Englishtown, NJ 07726", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Nonna%E2%80%99s+Cucina+448+US-9,+Englishtown,+NJ+07726" }
+  ],
+  "manhattan":[
+    { name:"Velvet Lounge", address:"123 5th Ave, New York, NY", time:"8:00 PM", maps:"https://www.google.com/maps/search/?api=1&query=123+5th+Ave+New+York" },
+    { name:"Midnight Bar",   address:"44 W 22nd St, New York, NY", time:"8:00 PM", maps:"https://www.google.com/maps/search/?api=1&query=44+W+22nd+St+New+York" }
+  ],
+  "brooklyn":[
+    { name:"Red Room BK", address:"55 Grand St, Brooklyn, NY", time:"8:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=55+Grand+St+Brooklyn" }
   ]
 };
+
+/* Theme rotation */
 const THEMES = [
   "Heaven vs. Hell: Angel or Devil","Cats vs. Dogs","Brain vs. Brawn","Light vs. Dark","Burlesque & Cabaret",
   "Fetish Fantasy","Sexy Uniform","Slumber Party Gone Wild","Primal Instincts","Neon Nights","Mobster & Mob Wife",
   "Goth night","After Dark at the Office","Flasher","Vampires and Velvet"
 ];
 const COLOR_CLASS = { blue:"theme-blue", green:"theme-green", red:"theme-red" };
-const AREA_ID = "central-nj";
 
 /* ===========================
-   Door frames (put images in /door/ )
-   blue-door-1..7.png, green-door-1..7.png, red-door-1..7.png
+   Area persistence helpers
+=========================== */
+const AREAS_KEY="lelibido:selectedAreas";
+function getSelectedAreas(){
+  try{
+    const raw=localStorage.getItem(AREAS_KEY);
+    if(raw){
+      const a=JSON.parse(raw);
+      if(Array.isArray(a) && a.length) return a;
+    }
+  }catch(e){}
+  return ["central-nj"];
+}
+function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(arr)) }
+
+/* UI: single-select for now (back-end supports multiple later) */
+const areaSelect=document.getElementById("areaSelect");
+const saveAreasBtn=document.getElementById("saveAreasBtn");
+(function renderAreas(){
+  areaSelect.innerHTML="";
+  AREAS.forEach(a=>{
+    const opt=document.createElement("option");
+    opt.value=a.id; opt.textContent=a.label;
+    areaSelect.appendChild(opt);
+  });
+  // Preselect first saved area
+  const firstSaved=getSelectedAreas()[0] || "central-nj";
+  areaSelect.value = firstSaved;
+})();
+saveAreasBtn.addEventListener("click", ()=>{
+  const chosen=[areaSelect.value];
+  if(!chosen[0]) chosen[0]="central-nj";
+  setSelectedAreas(chosen);
+});
+
+/* ===========================
+   Door frames (images in /door/)
 =========================== */
 const DOOR_FRAMES = {
   blue: Array.from({length:7},(_,i)=>`door/blue-door-${i+1}.png`),
@@ -232,7 +300,7 @@ function playDoorAnimation(color){
   });
 }
 
-/* Helpers */
+/* Date/rotation helpers */
 function weekNumber(date=new Date()){
   const d=new Date(Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()));
   const dayNum=d.getUTCDay()||7; d.setUTCDate(d.getUTCDate()+4-dayNum);
@@ -241,10 +309,16 @@ function weekNumber(date=new Date()){
 }
 function themeOfDay(){ const idx=weekNumber()%THEMES.length; return THEMES[idx] }
 function venueFor(areaId, color){
-  const list = VENUES_BY_AREA[areaId]||[]; if(!list.length) return null;
+  const list = VENUES_BY_AREA[areaId]||[];
+  if(!list.length) return null;
   const colorOffset={blue:0,green:1,red:2}[color]??0;
   const idx = (weekNumber()+colorOffset) % list.length;
   return list[idx];
+}
+function firstAreaWithVenues(){
+  const saved=getSelectedAreas();
+  for(const a of saved){ if((VENUES_BY_AREA[a]||[]).length) return a; }
+  return "central-nj";
 }
 function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 
@@ -264,31 +338,34 @@ function hasAccess({date, color}){ const d=readAccess()[date]; return !!(d && (d
 /* ===========================
    Stripe Payment Link URLs  (REPLACE THESE)
 =========================== */
-const STRIPE_LINK_SINGLE = "https://buy.stripe.com/your_single_room_payment_link"; // $2 tonight (single room)
-const STRIPE_LINK_ALL    = "https://buy.stripe.com/your_all_rooms_payment_link";  // $3 tonight (all rooms)
-/* We append:
-   - client_reference_id = YYYY-MM-DD|COLOR|RANDOM
-   - success_url = this page + ?paid=single|all&date=YYYY-MM-DD&color=COLOR#ok
-   - cancel_url  = this page
-*/
-function buildCheckoutURL(tier,color){
+const STRIPE_LINK_SINGLE = "https://buy.stripe.com/your_single_room_payment_link"; // $2 tonight
+const STRIPE_LINK_ALL    = "https://buy.stripe.com/your_all_rooms_payment_link";  // $3 tonight
+function buildCheckoutURL(tier,color,areaId){
   const date=todayStr();
   const base = tier==="single" ? STRIPE_LINK_SINGLE : STRIPE_LINK_ALL;
-  const ref = `${date}|${color}|${Math.random().toString(36).slice(2,8)}`;
+  const ref = `${date}|${areaId}|${color}|${Math.random().toString(36).slice(2,8)}`;
   const here = location.origin+location.pathname;
-  const success = encodeURIComponent(`${here}?paid=${tier}&date=${date}&color=${color}#ok`);
+  const success = encodeURIComponent(`${here}?paid=${tier}&date=${date}&color=${color}&area=${areaId}#ok`);
   const cancel  = encodeURIComponent(`${here}`);
   const join = base.includes("?") ? "&" : "?";
   return `${base}${join}client_reference_id=${encodeURIComponent(ref)}&success_url=${success}&cancel_url=${cancel}`;
 }
+/* On return from Stripe: grant access and immediately reveal the details for that color & area */
 (function handleReturnFromStripe(){
   const params=new URLSearchParams(location.search);
   const paid=params.get("paid"); // "single" | "all"
   const date=params.get("date");
   const color=params.get("color");
+  const area =params.get("area") || firstAreaWithVenues();
   if(paid && date){
     grantAccess({date, tier: paid==="all"?"all":"single", color});
-    history.replaceState({}, "", location.pathname); // clean URL
+    // Immediately show the invite they just unlocked
+    const theme=themeOfDay();
+    const venue=venueFor(area, color);
+    // Clean URL but keep context available for animation
+    history.replaceState({}, "", location.pathname);
+    // Play a quick open animation so it feels earned
+    playDoorAnimation(color).then(()=> showInvitation({color, venue, theme}));
   }
 })();
 
@@ -323,7 +400,7 @@ function showInvitation({color,venue,theme}){
   modalBackdrop.classList.add("show");
 }
 
-function showLockedPaywall({color,venue,theme}){
+function showLockedPaywall({color,venue,theme,areaId}){
   modal.className="modal "+(COLOR_CLASS[color]||"");
   modalTitle.textContent="Want to Come?";
   modalBody.innerHTML=`
@@ -342,8 +419,8 @@ function showLockedPaywall({color,venue,theme}){
     </div>
   `;
   modalBackdrop.classList.add("show");
-  document.getElementById("paySingleBtn").href = buildCheckoutURL("single", color);
-  document.getElementById("payAllBtn").href    = buildCheckoutURL("all", color);
+  document.getElementById("paySingleBtn").href = buildCheckoutURL("single", color, areaId);
+  document.getElementById("payAllBtn").href    = buildCheckoutURL("all", color, areaId);
 }
 
 /* ===========================
@@ -352,25 +429,26 @@ function showLockedPaywall({color,venue,theme}){
 function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el.classList.add("shake"); if(navigator.vibrate){ try{ navigator.vibrate(80) }catch(e){} } }
 
 /* ===========================
-   Door click handling
+   Door click handling (area-aware)
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeOfDay();
-  const venue   = venueFor(AREA_ID, color);
+  const areaId  = firstAreaWithVenues();       // from saved selection
+  const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
   if (color === myColor || hasAccess({date: today, color})) {
-    await playDoorAnimation(color);                 // play frames first
-    showInvitation({color, venue, theme});          // then show modal
+    await playDoorAnimation(color);
+    showInvitation({color, venue, theme});
   } else {
     lockedEffect(doorBtn[color]);
-    setTimeout(()=>showLockedPaywall({color, venue, theme}), 220);
+    setTimeout(()=>showLockedPaywall({color, venue, theme, areaId}), 220);
   }
 }
 doorBtn.blue.addEventListener("click", ()=>onDoorClick("blue"));
 doorBtn.green.addEventListener("click", ()=>onDoorClick("green"));
-doorBtn.red.addEventListener("click",  ()=>onDoorClick("red"));
+doorBtn.red  .addEventListener("click", ()=>onDoorClick("red"));
 
 /* ===========================
    Init
