--- a/secret-invite.html
+++ b/secret-invite.html
@@ -19,17 +19,20 @@
   body{margin:0;background:var(--black);color:var(--white);font-family:Montserrat,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif}
   .page-wrap{min-height:100svh;padding:20px;border:2px solid var(--gold);position:relative}
 
-  /* Logo */
-  .header{display:flex;align-items:center;justify-content:center;margin-bottom:24px}
+  /* Logo with extra space beneath for hierarchy */
+  .header{display:flex;align-items:center;justify-content:center;margin-bottom:28px}
   .logo{display:block;margin:0 auto;max-width:140px;width:140px;height:auto}
 
-  /* Area selector (compact, easy to extend later) */
-  .areas-wrap{display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap;margin:2px 0 14px}
-  .areas-wrap label{font-size:14px;opacity:.9}
-  .areas-select{
-    background:transparent;color:#ddd;border:1px solid var(--gold);
-    border-radius:10px;padding:8px 10px;min-width:230px;outline:none
+  /* Areas (multi-select tags) */
+  .areas-wrap{display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap;margin:-6px 0 12px}
+  .areas-title{font-size:14px;opacity:.9}
+  .areas{display:flex;flex-wrap:wrap;gap:8px;justify-content:center}
+  .tag{
+    display:inline-flex;align-items:center;gap:8px;
+    border:1px solid var(--gold);padding:8px 10px;border-radius:10px;
+    cursor:pointer;user-select:none;
   }
+  .tag input{accent-color:var(--gold)}
   .areas-save{
     border:1px solid var(--gold);background:transparent;color:var(--gold);
     padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:700
@@ -127,10 +130,10 @@
     <img class="logo" src="golden-le-libido-logo.png" alt="Le Libido" loading="lazy">
   </header>
 
-  <!-- Area picker -->
-  <div class="areas-wrap" id="areasWrap">
-    <label for="areaSelect">Your area(s):</label>
-    <select id="areaSelect" class="areas-select"></select>
+  <!-- Areas (multi-select) -->
+  <div class="areas-wrap">
+    <span class="areas-title">Your area(s):</span>
+    <div class="areas" id="areas"></div>
     <button id="saveAreasBtn" class="areas-save">Save</button>
   </div>
 
@@ -199,26 +202,24 @@ function getArchetypeColor(){
 }
 
 /* ===========================
-   Areas + venues (extend later)
+   Areas + venues
+   - Right now we only offer Central New Jersey
+   - Add more entries to AREAS later (users can select multiple)
 =========================== */
 const AREAS = [
-  { id:"central-nj", label:"Central New Jersey" },
-  { id:"manhattan", label:"Manhattan" },           // examples for future
-  { id:"brooklyn",  label:"Brooklyn" }
+  { id:"central-nj", label:"Central New Jersey" }
+  // { id:"manhattan", label:"Manhattan" },
+  // { id:"brooklyn",  label:"Brooklyn"  },
 ];
 
 const VENUES_BY_AREA = {
   "central-nj":[
+    // Add as many venues as you want here — the picker rotates them by day/color
     { name:"Metropolitan Cafe", address:"8 E Main St, Freehold, NJ 07728", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Metropolitan+Cafe+8+E+Main+St,+Freehold,+NJ+07728" },
     { name:"Nonna’s Cucina", address:"448 US-9, Englishtown, NJ 07726", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Nonna%E2%80%99s+Cucina+448+US-9,+Englishtown,+NJ+07726" }
   ],
-  "manhattan":[
-    { name:"Velvet Lounge", address:"123 5th Ave, New York, NY", time:"8:00 PM", maps:"https://www.google.com/maps/search/?api=1&query=123+5th+Ave+New+York" },
-    { name:"Midnight Bar",   address:"44 W 22nd St, New York, NY", time:"8:00 PM", maps:"https://www.google.com/maps/search/?api=1&query=44+W+22nd+St+New+York" }
-  ],
-  "brooklyn":[
-    { name:"Red Room BK", address:"55 Grand St, Brooklyn, NY", time:"8:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=55+Grand+St+Brooklyn" }
-  ]
+  // "manhattan":[ ... ],
+  // "brooklyn":[ ... ],
 };
 
 /* Theme rotation */
@@ -230,7 +231,7 @@ const THEMES = [
 const COLOR_CLASS = { blue:"theme-blue", green:"theme-green", red:"theme-red" };
 
 /* ===========================
-   Area persistence helpers
+   Area persistence helpers (multi-select)
 =========================== */
 const AREAS_KEY="lelibido:selectedAreas";
 function getSelectedAreas(){
@@ -241,29 +242,66 @@ function getSelectedAreas(){
       if(Array.isArray(a) && a.length) return a;
     }
   }catch(e){}
+  // default to Central NJ
   return ["central-nj"];
 }
 function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(arr)) }
 
-/* UI: single-select for now (back-end supports multiple later) */
-const areaSelect=document.getElementById("areaSelect");
+/* Render area checkboxes (multi-select) */
+const areasEl=document.getElementById("areas");
 const saveAreasBtn=document.getElementById("saveAreasBtn");
-(function renderAreas(){
-  areaSelect.innerHTML="";
+function renderAreas(){
+  const selected=new Set(getSelectedAreas());
+  areasEl.innerHTML="";
   AREAS.forEach(a=>{
-    const opt=document.createElement("option");
-    opt.value=a.id; opt.textContent=a.label;
-    areaSelect.appendChild(opt);
+    const id=`area-${a.id}`;
+    const tag=document.createElement("label");
+    tag.className="tag";
+    tag.htmlFor=id;
+    tag.innerHTML=`<input type="checkbox" id="${id}" ${selected.has(a.id)?"checked":""}> ${a.label}`;
+    areasEl.appendChild(tag);
   });
-  // Preselect first saved area
-  const firstSaved=getSelectedAreas()[0] || "central-nj";
-  areaSelect.value = firstSaved;
-})();
+}
+renderAreas();
+
 saveAreasBtn.addEventListener("click", ()=>{
-  const chosen=[areaSelect.value];
-  if(!chosen[0]) chosen[0]="central-nj";
+  const chosen=[];
+  areasEl.querySelectorAll("input[type=checkbox]").forEach(cb=>{
+    const id=cb.id.replace("area-","");
+    if(cb.checked) chosen.push(id);
+  });
+  if(!chosen.length) chosen.push("central-nj"); // always at least one
   setSelectedAreas(chosen);
 });
+
+/* Utilities to choose area + venue when multiple areas are selected */
+function selectedAreasWithVenues(){
+  const saved=getSelectedAreas();
+  const hasVenues=saved.filter(a=>(VENUES_BY_AREA[a]||[]).length>0);
+  return hasVenues.length?hasVenues:["central-nj"];
+}
+function weekNumber(date=new Date()){
+  const d=new Date(Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()));
+  const dayNum=d.getUTCDay()||7; d.setUTCDate(d.getUTCDate()+4-dayNum);
+  const yearStart=new Date(Date.UTC(d.getUTCFullYear(),0,1));
+  return Math.ceil((((d-yearStart)/86400000)+1)/7);
+}
+function themeOfDay(){ const idx=weekNumber()%THEMES.length; return THEMES[idx] }
+function pickAreaForColor(color){
+  const areas=selectedAreasWithVenues();
+  if(areas.length===1) return areas[0];
+  const colorOffset={blue:0,green:1,red:2}[color]??0;
+  const idx=(weekNumber()+colorOffset) % areas.length; // deterministic by week+color
+  return areas[idx];
+}
+function venueFor(areaId, color){
+  const list = VENUES_BY_AREA[areaId]||[];
+  if(!list.length) return null;
+  const colorOffset={blue:0,green:1,red:2}[color]??0;
+  const idx = (weekNumber()+colorOffset) % list.length;
+  return list[idx];
+}
+function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 
 /* ===========================
    Door frames (images in /door/)
@@ -288,6 +326,7 @@ const doorBtn={
 doorImg.blue.src=DOOR_CLOSED.blue;
 doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
+// Preload frames
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
 /* Faster animation: 120ms per frame */
@@ -299,28 +338,6 @@ function playDoorAnimation(color){
     step();
   });
 }
-
-/* Date/rotation helpers */
-function weekNumber(date=new Date()){
-  const d=new Date(Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()));
-  const dayNum=d.getUTCDay()||7; d.setUTCDate(d.getUTCDate()+4-dayNum);
-  const yearStart=new Date(Date.UTC(d.getUTCFullYear(),0,1));
-  return Math.ceil((((d-yearStart)/86400000)+1)/7);
-}
-function themeOfDay(){ const idx=weekNumber()%THEMES.length; return THEMES[idx] }
-function venueFor(areaId, color){
-  const list = VENUES_BY_AREA[areaId]||[];
-  if(!list.length) return null;
-  const colorOffset={blue:0,green:1,red:2}[color]??0;
-  const idx = (weekNumber()+colorOffset) % list.length;
-  return list[idx];
-}
-function firstAreaWithVenues(){
-  const saved=getSelectedAreas();
-  for(const a of saved){ if((VENUES_BY_AREA[a]||[]).length) return a; }
-  return "central-nj";
-}
-function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 
 /* ===========================
    Entitlements (client-side “pay once per day”)
@@ -356,16 +373,13 @@ function buildCheckoutURL(tier,color,areaId){
   const paid=params.get("paid"); // "single" | "all"
   const date=params.get("date");
   const color=params.get("color");
-  const area =params.get("area") || firstAreaWithVenues();
+  const area =params.get("area") || pickAreaForColor(color||"blue");
   if(paid && date){
     grantAccess({date, tier: paid==="all"?"all":"single", color});
-    // Immediately show the invite they just unlocked
     const theme=themeOfDay();
-    const venue=venueFor(area, color);
-    // Clean URL but keep context available for animation
-    history.replaceState({}, "", location.pathname);
-    // Play a quick open animation so it feels earned
-    playDoorAnimation(color).then(()=> showInvitation({color, venue, theme}));
+    const venue=venueFor(area, color||"blue");
+    history.replaceState({}, "", location.pathname); // clean URL
+    playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
   }
 })();
 
@@ -429,12 +443,12 @@ function showLockedPaywall({color,venue,theme,areaId}){
 function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el.classList.add("shake"); if(navigator.vibrate){ try{ navigator.vibrate(80) }catch(e){} } }
 
 /* ===========================
-   Door click handling (area-aware)
+   Door click handling (multi-area aware)
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeOfDay();
-  const areaId  = firstAreaWithVenues();       // from saved selection
+  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
@@ -454,7 +468,7 @@ doorBtn.red  .addEventListener("click", ()=>onDoorClick("red"));
    Init
 =========================== */
 (function init(){
-  // Closed frames already assigned above
+  // Closed frames already assigned; everything else is event-driven
 })();
 </script>
 </body>
