--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <style>
     :root {
       --gold: #e1bf78;
-      --red: #FF6A6A;       /* for "serendipity" */
-      --blue: #67B2FF;      /* for "spontaneity" */
-      --green: #06954E;
+      --red: #FF6A6A;       /* for "hilariously sexy twists on carnival rides and games" */
+      --blue: #67B2FF;      /* for "aphrodisiac restaurant" */
+      --green: #06954E;     /* for "first ever in-person dating app." */
       --background: #000000;
     }
 
@@ -93,10 +93,10 @@
 
   <img src="le-libido-logo.PNG" alt="Le Libido Logo" class="logo" />
 
-  <h1>Where dating feels <span class="green">organic</span></h1>
+  <h1>The ultimate dating destination</h1>
 
   <div class="description">
-    Le Libido brings <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
+    Featuring <span class="red">hilariously sexy twists on carnival rides and games</span> an <span class="blue">aphrodisiac restaurant</span> and the <span class="green">first ever in-person dating app.</span>
   </div>
 
   <div class="question">Are you 18 or older?</div>
