--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h1>The ultimate dating destination</h1>
 
   <div class="description">
-    Featuring <span class="red">hilariously sexy carnival rides and games</span> an <span class="blue">aphrodisiac restaurant</span> and the <span class="green">first ever in-person dating app.</span>
+    Featuring <b> <span class="red">hilariously sexy carnival rides and games</span> </b> an <span class="blue">aphrodisiac restaurant</span> and the <b> <span class="green">first ever in-person dating app.</span> </b>
   </div>
 
   <div class="question">Are you 18 or older?</div>
