--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h1>The ultimate dating destination</h1>
 
   <div class="description">
-    Featuring <b> <span class="red">sexy carnival amusements</span> </b> an <span class="blue">aphrodisiac restaurant</span> & the <b> <span class="green">1st in-person dating app.</span> </b>
+    Featuring <b> <span class="red">sexy carnival amusements</span> </b> an <span class="blue">aphrodisiac restaurant</span> and the <b> <span class="green">1st in-person dating app.</span> </b>
   </div>
 
   <div class="question">Are you 18 or older?</div>
