--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h1>The ultimate dating destination</h1>
 
   <div class="description">
-    Featuring <span class="red">sexy carnival amusements,</span> an <span class="blue">aphrodisiac restaurant,</span> and the <b> <span class="green">first in-person dating app.</span>
+    Featuring <span class="red">sexy carnival amusements,</span> an <span class="blue">aphrodisiac restaurant,</span> and the <span class="green">first in-person dating app.</span>
   </div>
 
   <div class="question">Are you 18 or older?</div>
