--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -175,11 +175,11 @@
     </div>
 
     <div class="caption">
-      Meet someone as<br>
+      Find someone who checks all your boxes. Meet someone as<br>
       <span style="color: var(--red);">wild</span>, 
       <span style="color: var(--green);">adventurous</span>, or 
       <span style="color: var(--blue);">romantic</span><br>
-      as you. Step into a Le Libido venue for a night of laughter, lust, and love.
+      as you. 
     </div>
   </div>
 
