--- a/quiz-new.html
+++ b/quiz-new.html
@@ -18,9 +18,9 @@
         <div class="subtitle">
           10 questions<br>
           100% private<br>
-          1000X more <br>
-        <span class="scan-dalous">SCAN-DALOUS</span><br>
-          than swiping
+          1000X too <br>
+        <span class="scan-dalous">SCANDALOUS</span><br>
+          for the app store
         </div>
       </div>
 
