--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -169,8 +169,8 @@
     <h1>Are you ready FOREPLAY</h1>
 
     <div class="buttons">
-      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at a Le Libido Venue</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Date on the go</button>
+      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at Le Libido</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Get invited to our pop-up dating events</button>
       <button class="button" onclick="window.location.href='https://lelibido.com/archetype-gallery.html'">Just curious? Explore the Sexual Profiles</button>
     </div>
 
