--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -192,7 +192,7 @@
     <div class="modal-content">
       <span class="close" onclick="document.getElementById('venueModal').style.display='none'">&times;</span>
       <h2>Coming Soon</h2>
-      <p>The first Le Libido is coming soon.</p>
+      <p>Le Libido is almost here.</p>
       <form action="mailto:spencer@lelibido.com" method="POST" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
