--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -175,10 +175,10 @@
     </div>
 
     <div class="caption">
-      Find someone who checks all your boxes. Meet someone as<br>
-      <span style="color: var(--red);">wild</span>, 
-      <span style="color: var(--green);">adventurous</span>, or 
-      <span style="color: var(--blue);">romantic</span><br>
+      Find someone who checks all your boxes. Meet people as<br>
+      <span style="color: var(--blue);">romantic</span>, 
+      <span style="color: var(--green);">frisky</span>, or 
+      <span style="color: var(--red);">kinky</span><br>
       as you. 
     </div>
   </div>
