--- a/secret-invite.html
+++ b/secret-invite.html
@@ -10,7 +10,7 @@
     --gold:#e1bf78;
     --black:#000;
     --white:#fff;
-    --blue:#064D95;
+    --blue:#67B2FF;
     --green:#06954E;
     --red:#950606;
     --modal-max:560px;
