--- a/secret-invite.html
+++ b/secret-invite.html
@@ -33,10 +33,6 @@
     cursor:pointer;user-select:none;
   }
   .tag input{accent-color:var(--gold)}
-  .areas-save{
-    border:1px solid var(--gold);background:transparent;color:var(--gold);
-    padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:700
-  }
 
   /* Doors grid */
   .doors{
@@ -134,7 +130,6 @@
   <div class="areas-wrap">
     <span class="areas-title">Your area(s):</span>
     <div class="areas" id="areas"></div>
-    <button id="saveAreasBtn" class="areas-save">Save</button>
   </div>
 
   <!-- Doors -->
@@ -249,7 +244,6 @@ function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(a
 
 /* Render area checkboxes (multi-select) */
 const areasEl=document.getElementById("areas");
-const saveAreasBtn=document.getElementById("saveAreasBtn");
 function renderAreas(){
   const selected=new Set(getSelectedAreas());
   areasEl.innerHTML="";
@@ -264,14 +258,23 @@ function renderAreas(){
 }
 renderAreas();
 
-saveAreasBtn.addEventListener("click", ()=>{
-  const chosen=[];
-  areasEl.querySelectorAll("input[type=checkbox]").forEach(cb=>{
-    const id=cb.id.replace("area-","");
-    if(cb.checked) chosen.push(id);
-  });
-  if(!chosen.length) chosen.push("central-nj"); // always at least one
-  setSelectedAreas(chosen);
+// Auto-save when an area checkbox is toggled (keeps at least one selected)
+areasEl.addEventListener("change", (e)=>{
+  if(e.target && e.target.matches('input[type="checkbox"]')){
+    const chosen=[];
+    areasEl.querySelectorAll('input[type="checkbox"]').forEach(cb=>{
+      if(cb.checked) chosen.push(cb.id.replace("area-",""));
+    });
+    if(!chosen.length){
+      const fallbackId = "central-nj";
+      const fallbackCb = areasEl.querySelector(`#area-${fallbackId}`);
+      if(fallbackCb){
+        fallbackCb.checked = true;
+      }
+      chosen.push(fallbackId);
+    }
+    setSelectedAreas(chosen);
+  }
 });
 
 /* Utilities to choose area + venue when multiple areas are selected */
