--- a/secret-invite.html
+++ b/secret-invite.html
@@ -217,12 +217,39 @@ const VENUES_BY_AREA = {
   // "brooklyn":[ ... ],
 };
 
-/* Theme rotation */
-const THEMES = [
-  "Heaven vs. Hell: Angel or Devil","Cats vs. Dogs","Brain vs. Brawn","Light vs. Dark","Burlesque & Cabaret",
-  "Fetish Fantasy","Sexy Uniform","Slumber Party Gone Wild","Primal Instincts","Neon Nights","Mobster & Mob Wife",
-  "Goth night","After Dark at the Office","Flasher","Vampires and Velvet"
+/* =========
+   Themes
+   - Same list, but each color gets a deterministic offset so all three rooms differ nightly
+   - The value already includes title + attire, e.g. "Heaven vs. Hell: dress up as an Angel or Devil"
+=========== */
+const THEMES_BASE = [
+  "Heaven vs. Hell: dress up as an Angel or Devil",
+  "Cats vs. Dogs: wear playful ears, whiskers, or puppy vibes.",
+  "Brain vs. Brawn: dress up as a nerd or jock",
+  "Light vs. Dark: wear either all white or an all black",
+  "Burlesque & Cabaret: wear either corsets, fishnets, feathers, garters, silk gloves, or an outfit with swagger",
+  "Fetish Fantasy: dress up in leather, lace, or latex",
+  "Sexy Uniform: dress up as a nurse, cop, teacher, construction worker, etc.",
+  "Slumber Party Gone Wild: wear either lingerie, pajamas, silk robes, messy bed hair.",
+  "Primal Instincts: wear either leopard, snake, panther, or other primal animal",
+  "Neon Nights: dress up in UV paint, mesh, sheer, bright colors, glow-in-the-dark.",
+  "Mobster & Mob Wife: dress up in either fur coats, cigars, pinstripes, suits",
+  "Goth night: wear black outfit, heavy makeup, straightened hair, etc.",
+  "After Dark at the Office: dress up in a power suit, secretary outfit, or as a boss",
+  "Flasher: wear a trench coat, white t-shirt, short skirt, completely unbuttoned collared shirt",
+  "Vampires and Velvet: dress up in dark velvet, draw on bite marks, blood-red lipstick, or just mysterious vibes",
+  "Magic: dress up as a witch or wizard"
 ];
+function dayOfYear(d=new Date()){
+  const start=new Date(d.getFullYear(),0,1);
+  const diff=d - start;
+  return Math.floor(diff/86400000);
+}
+function themeForColor(color){
+  const colorOffset = {blue:0, green:1, red:2}[color] ?? 0;
+  const idx = (dayOfYear() + colorOffset) % THEMES_BASE.length;
+  return THEMES_BASE[idx];
+}
 const COLOR_CLASS = { blue:"theme-blue", green:"theme-green", red:"theme-red" };
 
 /* ===========================
@@ -289,7 +316,6 @@ function weekNumber(date=new Date()){
   const yearStart=new Date(Date.UTC(d.getUTCFullYear(),0,1));
   return Math.ceil((((d-yearStart)/86400000)+1)/7);
 }
-function themeOfDay(){ const idx=weekNumber()%THEMES.length; return THEMES[idx] }
 function pickAreaForColor(color){
   const areas=selectedAreasWithVenues();
   if(areas.length===1) return areas[0];
@@ -305,6 +331,25 @@ function venueFor(areaId, color){
   return list[idx];
 }
 function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
+function formatLongDateTime(dateObj, timeLabel){
+  // timeLabel like "7:30 PM"
+  const dateStr = dateObj.toLocaleDateString(undefined,{weekday:'long', year:'numeric', month:'long', day:'numeric'});
+  return `${dateStr} at ${timeLabel}`;
+}
+function parseTimeOnDate(dateObj, timeLabel){
+  // returns a Date with the given local date and time
+  const m = timeLabel.match(/^\s*(\d{1,2}):(\d{2})\s*([AP]M)\s*$/i);
+  let h=19, min=30; // default 7:30 PM
+  if(m){
+    h = parseInt(m[1],10);
+    min = parseInt(m[2],10);
+    const ampm = m[3].toUpperCase();
+    if(ampm==="PM" && h<12) h+=12;
+    if(ampm==="AM" && h===12) h=0;
+  }
+  const d = new Date(dateObj.getFullYear(), dateObj.getMonth(), dateObj.getDate(), h, min, 0, 0);
+  return d;
+}
 
 /* ===========================
    Door frames (images in /door/)
@@ -379,7 +424,7 @@ function buildCheckoutURL(tier,color,areaId){
   const area =params.get("area") || pickAreaForColor(color||"blue");
   if(paid && date){
     grantAccess({date, tier: paid==="all"?"all":"single", color});
-    const theme=themeOfDay();
+    const theme=themeForColor(color||"blue");
     const venue=venueFor(area, color||"blue");
     history.replaceState({}, "", location.pathname); // clean URL
     playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
@@ -387,8 +432,34 @@ function buildCheckoutURL(tier,color,areaId){
 })();
 
 /* ===========================
-   Modal
+   Modal helpers
 =========================== */
+function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
+function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
+  const dtStartUtc = new Date(startLocal.getTime() - (startLocal.getTimezoneOffset()*60000));
+  const dtEndUtc = new Date(dtStartUtc.getTime() + durationMinutes*60000);
+  const fmt = (d)=> d.toISOString().replace(/[-:]/g,'').replace(/\.\d{3}Z$/,'Z');
+  const uid = `lelibido-${Math.random().toString(36).slice(2)}@lelibido.com`;
+  const ics = [
+    "BEGIN:VCALENDAR",
+    "VERSION:2.0",
+    "PRODID:-//Le Libido//Secret Invite//EN",
+    "CALSCALE:GREGORIAN",
+    "METHOD:PUBLISH",
+    "BEGIN:VEVENT",
+    `UID:${uid}`,
+    `DTSTAMP:${fmt(new Date())}`,
+    `DTSTART:${fmt(dtStartUtc)}`,
+    `DTEND:${fmt(dtEndUtc)}`,
+    `SUMMARY:${title}`,
+    `DESCRIPTION:${description.replace(/\n/g,'\\n')}`,
+    `LOCATION:${locationText}`,
+    "END:VEVENT",
+    "END:VCALENDAR"
+  ].join("\r\n");
+  return new Blob([ics], {type:"text/calendar"});
+}
+
 const modalBackdrop=document.getElementById("modalBackdrop");
 const modal=document.getElementById("modal");
 const modalBody=document.getElementById("modalBody");
@@ -398,36 +469,56 @@ modalClose.addEventListener("click", ()=>{ modalBackdrop.classList.remove("show"
 
 function showInvitation({color,venue,theme}){
   modal.className="modal "+(COLOR_CLASS[color]||"");
-  modalTitle.textContent="Your Secret Invitation";
+  modalTitle.textContent="Meet Your Type Tonight";
+  const today = new Date();
+  const startLabel = venue?.time ?? "7:30 PM";
+  const startsText = formatLongDateTime(today, startLabel);
+  const themeLine = theme; // already includes "Title: attire"
+  const room = roomLabel(color);
+
+  // Build content
   modalBody.innerHTML=`
-    <span class="pill">Come together with your people.</span>
     <div class="invite-card">
-      <div class="invite-brand">${color[0].toUpperCase()+color.slice(1)} Room • ${theme}</div>
+      <div class="invite-brand">${room}</div>
       <h3 class="invite-h1">${venue?.name ?? "TBA"}</h3>
       <div class="meta">
         <div><strong>Address:</strong> ${venue?.address ?? "TBA"}</div>
-        <div><strong>Starts:</strong> ${venue?.time ?? "7:30 PM"}</div>
+        <div><strong>Starts:</strong> ${startsText}</div>
+        <div><strong>Theme:</strong> ${themeLine}</div>
       </div>
       <div class="buttons">
         <a class="btn" href="${venue?.maps ?? "#"}" target="_blank" rel="noopener">Directions to venue</a>
+        <a class="btn primary" id="addToCalendarBtn">Add to calendar</a>
       </div>
-      <div class="tiny">Show up tonight. Be seen.</div>
     </div>
   `;
   modalBackdrop.classList.add("show");
+
+  // Wire up Add to Calendar
+  const startLocal = parseTimeOnDate(today, startLabel);
+  const title = `${room} • ${theme.split(':')[0]}`;
+  const description = themeLine;
+  const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
+  const icsBlob = makeICS({title, description, locationText, startLocal});
+  const url = URL.createObjectURL(icsBlob);
+  const addBtn = document.getElementById("addToCalendarBtn");
+  addBtn.setAttribute("href", url);
+  addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
 }
 
 function showLockedPaywall({color,venue,theme,areaId}){
   modal.className="modal "+(COLOR_CLASS[color]||"");
   modalTitle.textContent="Want to Come?";
+  const startLabel = venue?.time ?? "7:30 PM";
+  const startsText = formatLongDateTime(new Date(), startLabel);
   modalBody.innerHTML=`
     <div class="invite-card">
-      <div class="invite-brand">${color[0].toUpperCase()+color.slice(1)} Room • Exclusive Access</div>
+      <div class="invite-brand">${roomLabel(color)} • Exclusive Access</div>
       <h3 class="invite-h1 blurred">${venue?.name ?? "Secret Venue"}</h3>
       <div class="meta">
         <div class="blurred"><strong>Address:</strong> ${venue?.address ?? "Hidden for now"}</div>
+        <div><strong>Starts:</strong> ${startsText}</div>
         <div><strong>Theme:</strong> <span class="blurred">${theme}</span></div>
-        <div><strong>Starts:</strong> ${venue?.time ?? "7:30 PM"}</div>
       </div>
       <div class="buttons">
         <a class="btn primary" id="paySingleBtn">Gain access to the ${color} room tonight for only $2</a>
@@ -450,7 +541,7 @@ function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
-  const theme   = themeOfDay();
+  const theme   = themeForColor(color);
   const areaId  = pickAreaForColor(color);  // choose among user-selected areas
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
